<resources>
    <string name="app_name">PracCalculadora</string>
    <string name="btn_suma">SUMA</string>
    <string name="btn_resta">RESTA</string>
    <string name="btn_multiplicacion">MULTIPLICACION</string>
    <string name="btn_division">DIVISION</string>
    <string name="txt_titulo">CALCULADORA</string>
    <string name="txt_num1">Primer numero</string>
    <string name="txt_num2">Segundo numero</string>
    <string name="txt_resultado">Resultado</string>
    <string name="edt_espacio">0</string>
    <string name="btn_iniciar">PLAY</string>
    <string name="btn_detener">STOP</string>
</resources>
